--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,14 +2,25 @@
 <!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" />  -->
 <input type="text" class="form-control" [(ngModel)]="serverName" />
 <!-- <p>{{ serverName }}</p> -->
-
-<button
-  class="btn btn-primary"
-  [disabled]="!allowNewServer"
-  (click)="onCreateServer()"
->
-  Add Server
-</button>
+<label>Username:</label>
+<input type="text" class="form-control" [(ngModel)]="userName" />
+<p>{{ userName }}</p>
+<div class="row">
+  <button
+    class="btn btn-primary"
+    [disabled]="!allowNewServer"
+    (click)="onCreateServer()"
+  >
+    Add Server
+  </button>
+  <button
+    class="btn btn-primary"
+    [disabled]="userName === ''"
+    (click)="userName = ''"
+  >
+    Login
+  </button>
+</div>
 <!-- <p>{{ allowNewServer }}</p> -->
 <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
