--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,27 +1,17 @@
 <label>Server Name</label>
 <!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" />  -->
 <input type="text" class="form-control" [(ngModel)]="serverName" />
-<!-- <p>{{ serverName }}</p> -->
-<label>Username:</label>
-<input type="text" class="form-control" [(ngModel)]="userName" />
-<p>{{ userName }}</p>
-<div class="row">
-  <button
-    class="btn btn-primary"
-    [disabled]="!allowNewServer"
-    (click)="onCreateServer()"
-  >
-    Add Server
-  </button>
-  <button
-    class="btn btn-primary"
-    [disabled]="userName === ''"
-    (click)="userName = ''"
-  >
-    Login
-  </button>
-</div>
+<p>{{ serverName }}</p>
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()"
+>
+  Add Server
+</button>
+
 <!-- <p>{{ allowNewServer }}</p> -->
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
