--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,21 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h3>I'm in the AppComponent!</h3>
+      <!-- <h3>I'm in the AppComponent!</h3>
       <hr />
-      <app-servers></app-servers>
+      <app-servers></app-servers> -->
+      <hr />
+      <button class="btn btn-primary" (click)="toggleDetails()">
+        Display Details
+      </button>
+      <p *ngIf="showDetails">Secret Password = tuna</p>
+      <div
+        *ngFor="let logItem of log"
+        [ngStyle]="{ backgroundColor: logItem >= 5 ? 'blue' : 'transparent' }"
+        [ngClass]="{ after5Log: logItem >= 5 }"
+      >
+        {{ logItem }}
+      </div>
     </div>
   </div>
 </div>
